@@ -10,7 +10,7 @@
     <thirdpartyegg name="six"/> 
     <thirdpartyegg name="Babel" minversion="1.3" maxversion="1.3.9999"/> 
     <thirdpartyegg name="python-dateutil" minversion="2.2" maxversion="2.2.999"/> 
-    <thirdpartyegg name="decorator" minversion="3.4" maxversion="3.4"/> 
+    <thirdpartyegg name="decorator" minversion="3.4" maxversion="3.4.999"/> 
   </deps>
 
   <deps purpose="test">
@@ -47,6 +47,9 @@
 
   <alias name="unit" command="setup -- -q nosetests -s --with-id --nologcapture --tests=reahl/component_dev -t -i '.*'"/>
   
+  <distpackage type="wheel">
+    <packageindex repository="devpi"/>
+  </distpackage>
   <distpackage type="sdist">
     <packageindex repository="devpi"/>
   </distpackage>
