@@ -32,7 +32,7 @@
 
   <alias name="unit" command="setup -- -q nosetests -s --with-id --nologcapture --tests=reahl/domainui_dev -t -i '.*'"/>
   
-  <distpackage type="sdist">
+  <distpackage type="wheel">
     <packageindex repository="devpi"/>
   </distpackage>
     
