@@ -42,7 +42,7 @@
 
   <alias name="unit" command="setup -- -q nosetests -s --with-id --nologcapture -t -i'.*' --tests=reahl/webdeclarative_dev "/>
   
-  <distpackage type="sdist">
+  <distpackage type="wheel">
     <packageindex repository="devpi"/>
   </distpackage>
   
